--- a/blocks/experience/_index.scss
+++ b/blocks/experience/_index.scss
@@ -13,24 +13,26 @@
 }
 
 .experience-list__wrapper {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: var(--gap);
 
-    border-top: 1px solid var(--color-text-grey);
+    // border-top: 1px solid var(--color-text-grey);
     padding: 3rem 0 0 0;
 }
 
 .experience-list__name {
+    width: 50%;
     grid-column: 1/2;
 }
 
 .experience-list {
-    width: 100%;
+    width: 50%;
     grid-column: 2/4;
 
     .experience-item:not(:first-child) {
-        border-top: 1px solid var(--color-text-grey);
+        // border-top: 1px solid var(--color-text-grey);
         padding: 3rem 0;
     }
 }
@@ -42,7 +44,7 @@
     width: 100%;
     display: grid;
     grid-template-columns: 22.5% 70%;
-    padding-bottom: 3rem;
+    padding-bottom: 2rem;
     gap: 1rem;
 }
 
@@ -148,6 +150,9 @@
         display: flex;
         flex-direction: column;
         gap: 0;
+    }
+    .experience-list__name,.experience-list{
+        width: 100%;
     }
 }
 
