--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -1,7 +1,6 @@
 .footer {
-    transition-property: all;
-    transition-duration: .5s;
     position: relative;
+
 
     &._hide {
         // transform: translateY(-30%) scale(0.9);
@@ -42,37 +41,38 @@
 }
 
 .footer__content {
+    border-top: var(--border);
+    margin-top: calc(2 * var(--padding));
+    padding: calc(.7 * var(--padding)) var(--padding);
+
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 3rem;
+    gap: var(--padding);
     position: relative;
     height: 100%;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: flex-start;
+
+    * {
+        color: var(--color-text-grey);
+        font-size: var(--font-size--1);
+    }
 }
 
 .footer__links__wrapper {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
     z-index: 15;
-    gap: 1.5rem;
-}
-
-.footer__disclaimer,
-.footer__disclaimer * {
-    margin-top: 3rem;
-    color: var(--color-text-grey);
-    font-size: var(--font-size--1);
-    max-width: 42rem;
+    gap: var(--padding);
 }
 
 .footer__links {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 1rem;
-    row-gap: .7rem;
+    row-gap: 0.7rem;
     width: -moz-fit-content;
     width: fit-content;
     flex-wrap: wrap;
@@ -95,7 +95,7 @@
 
 .footer__caption {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     align-items: flex-end;
     gap: 1rem;
 
@@ -111,17 +111,13 @@
 @media screen and (max-width: 1220px) {}
 
 @media screen and (max-width: 767px) {
-    .footer {
+    .footer__content{
+        padding: var(--padding);
 
-        padding: 2rem var(--padding);
     }
-
-    .footer__content {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
     .footer__caption {
         align-items: flex-start;
+        width: 100%;
+        justify-content: space-between;
     }
 }
