--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -6,8 +6,11 @@
     display: flex;
     flex-direction: row-reverse;
     flex-direction: row;
-    gap: 2rem;
+    gap: calc(2 * var(--gap));
 
+    .single-post__meta__wrapper {
+        padding-left: 2.5rem;
+    }
 }
 
 
@@ -54,14 +57,13 @@
     }
 
     .single-post__meta__wrapper {
-        margin-top: 2.5rem;
+        margin-top: 1rem;
     }
 
     .post-category {
         position: absolute;
         top: .3rem;
         left: 0;
-        writing-mode: sideways-lr;
     }
 }
 
@@ -159,122 +161,6 @@
 // }
 
 
-.post-card__big__meta {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: column;
-    text-align: left;
-    height: fit-content;
-    width: calc(100% - .5 * var(--grid-gap));
-
-    .post-card__big__meta__item {
-        &:not(:last-child) {
-            // border-bottom: solid 1px var(--color-text-grey);
-        }
-    }
-}
-
-.post-card__big__meta__item {
-
-    display: flex;
-    flex-direction: row;
-    padding: 0.3rem 0px;
-    width: fit-content;
-    position: relative;
-    width: 100%;
-    justify-content: flex-start;
-
-    opacity: 1;
-
-    * {
-        font-size: var(--font-size--1);
-    }
-}
-
-.post-card__big__meta__item__variable {
-    color: var(--color-text-grey);
-    width: 30%;
-}
-
-.post-card__big__meta__item__value {
-    width: 70%;
-    color: var(--color-text-primary);
-}
-
-
-.post-card__meta__team {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    flex-direction: row;
-    gap: 8px;
-    position: relative;
-
-    // display: none;
-}
-
-.post-card__meta__team__images__wrapper {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: row;
-    gap: -11px;
-}
-
-.post-card__meta__teaam__imge__source {
-    // border: 3px solid var(--color-primary);
-    border: 3px solid rgb(47, 47, 47);
-    border: 3px solid #1A1A1A;
-    border: 3px solid var(--color-primary);
-    border: 3px solid 0a0a0a;
-    border-radius: 152px;
-    padding: 3px;
-    width: 28px;
-    height: 28px;
-    /* background: #fff; */
-    margin: 0;
-    padding: 0;
-
-    &:not(:first-child) {
-        margin-left: -13px;
-    }
-
-    &:first-child {
-        z-index: 5;
-    }
-
-    &:nth-child(2) {
-        z-index: 4;
-    }
-
-    &:nth-child(3) {
-        z-index: 3;
-    }
-
-    &:nth-child(2) {
-        z-index: 2;
-    }
-}
-
-.post-card__meta__team__name {
-    font-size: var(--font-size--1);
-    color: var(--color-secondary);
-
-    * {
-        font-size: var(--font-size--1);
-        color: var(--color-secondary);
-    }
-
-    a {
-        &:hover {
-            color: var(--color-link-hover);
-        }
-    }
-}
-
-
-
 .post-card__big__gallery__background {
     position: absolute !important;
     top: 0;
@@ -320,7 +206,7 @@
     height: 100%;
     z-index: 5;
 
-    width: 70%;
+    width: calc(100% - 42rem);
     aspect-ratio: 3/2;
 
     .f-carousel {
@@ -517,7 +403,7 @@
 @media screen and (max-width: 1024px) {
     .post-card__big {
         flex-direction: column;
-        gap: 6rem;
+        gap: 0;
     }
 
     .post-card__big__gallery {
@@ -526,6 +412,7 @@
 
     .post-card__big__content__wrapper {
         width: 100%;
+        margin-top: 6rem;
     }
 
     .post-card__big__heading {}
