--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -784,16 +784,42 @@ figcaption {
     gap: var(--gap);
 }
 
+.pd_flex-column {
+    flex-direction: column;
+    gap: var(--gap);
+}
+
 .pd_flex-75 {
     flex-basis: 75%
+}
+
+.pd_flex-50 {
+    flex-basis: 50%
 }
 
 .pd_flex-25 {
     flex-basis: 25%
 }
 
+.pd_flex-aligned-end {
+    align-items: flex-end;
+}
+
 .pd_flex-aligned-bottom {
     align-items: flex-end;
+}
+
+.pd_width_50 {
+    width: calc(50% - 5px);
+}
+
+.pd_margin-auto {
+    margin: 0 auto;
+}
+
+.pd_margin-right {
+    margin-right: 0;
+    margin-left: auto;
 }
 
 .single-page--v1 {
@@ -962,6 +988,11 @@ figcaption {
         flex-direction: column;
         align-items: flex-start;
     }
+    .pd_width_50 {
+        width: 100%;
+        margin: auto;
+    }
+    
 }
 
 @media screen and (max-width: 480px) {
@@ -983,7 +1014,7 @@ figcaption {
     // padding-right: 0;
 
     h1 {
-        font-family: var(--font-family-secondary);
+        max-width: 100% !important;
         margin-bottom: 1.5rem;
     }
 }
