--- a/blocks/section__first-screen/_index.scss
+++ b/blocks/section__first-screen/_index.scss
@@ -9,40 +9,37 @@
     align-items: flex-start;
     gap: 2rem;
     padding-bottom: 6rem;
+    padding-top: var(--padding) !important;
 }
 
-.section__first-screen__content {
-    height: fit-content;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    gap: 2rem;
-    position: relative;
-    z-index: 5;
-    max-width: 100%;
+// .section__first-screen__content {
+//     height: fit-content;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: flex-start;
+//     gap: 1rem;
+//     position: relative;
+//     z-index: 5;
+//     max-width: 100%;
 
-    * {
-        max-width: 100% !important;
-    }
-}
+//     * {
+//         max-width: 100% !important;
+//     }
+// }
 
 
 .first-screen__text {
-    // width: calc(100% - 42rem);
 }
 
 .first-screen__text * {
-    // line-height: 90%;
-    // font-family: var(--font-family-secondary);
-    font-size: 9.4vw;
-    line-height: 70%;
+    font-size: var(--font-size-5);
+    line-height: 100%;
     font-weight: var(--font-weight-medium);
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
     color: var(--color-text-primary);
 }
 
 .first-screen__caption {
-    width: 42rem;
 }
 
 .first-screen__caption * {
@@ -59,7 +56,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: calc(100vw - var(--padding) - 5px);
     height: 100%;
     object-fit: cover;
 }
@@ -71,7 +68,7 @@
 @media screen and (max-width: 1024px) {}
 
 @media screen and (max-width: 1024px) {
-    .section__first-screen__content {}
+    // .section__first-screen__content {}
 }
 
 @media screen and (max-width: 767px) {
@@ -80,17 +77,19 @@
         // margin-top: -45px;
         gap: 1rem;
     }
-
+    .first-screen__image__source {
+        width: calc(100vw - var(--padding));
+    }
     .first-screen__text * {
         // font-size: 15.9vw;
         font-size: var(--font-size-4);
         line-height: 100%;
     }
 
-    .section__first-screen__content {
-        flex-direction: column;
-        gap: .4rem;
+    // .section__first-screen__content {
+    //     flex-direction: column;
+    //     gap: .4rem;
 
-        align-items: flex-start;
-    }
+    //     align-items: flex-start;
+    // }
 }
