--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -57,7 +57,8 @@
     }
 
     .single-post__meta__wrapper {
-        margin-top: 1rem;
+        margin-top: calc(2 * var(--font-size-0));
+
     }
 
     .post-category {
@@ -77,10 +78,11 @@
 
 .post-card__big__heading {
     // font-weight: 600;
-    font-size: var(--font-size-1);
+    font-size: var(--font-size-0);
     font-weight: var(--font-weight-medium);
-    line-height: var(--font-size-1);
+    line-height: var(--font-size-0);
     z-index: 10;
+    text-transform: uppercase;
 
     color: var(--color-text-primary);
 
@@ -89,14 +91,15 @@
     align-content: center;
     align-items: center;
     gap: .3rem;
-
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
     &._mobile {
         padding: var(--padding);
     }
 }
 
 .post-card__big__short-description {
-    margin-top: 0.8rem;
+    margin-top: calc(2 * var(--font-size-0));
     width: 100%;
     position: relative;
     padding-left: 2.5rem;
